// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Modal Borrow Modal 1`] = `
<div
  className="sc-ivTmOn fTyfVC"
>
  <div
    className="o-center-layout sc-crXcEl sc-cxabCf TBZtj gAjELd"
  >
    <button
      appearance="text"
      className="sc-hKMtZM sc-papXJ jKfTjM ltXRM sc-iIPllB gVyorW u-fit-content-width"
      data-element="button"
      icon="close"
      size="medium"
      variant="medium"
    />
    <div
      className="sc-llJcti eJHidG"
    >
      <div
        className="sc-evZas gpoJlf"
        gap={5}
      >
        <div
          className="sc-evZas dYoufZ"
          gap={3}
        >
          <div
            className="sc-bZkfAO jNQqhP"
            data-element="tableWrapper"
          >
            <table
              className="sc-kLLXSd eXWyzl"
              data-element="table"
            >
              <thead
                className="sc-jdAMXn fcA-dUh"
              >
                <tr>
                  <td
                    className="sc-iTONeN knoCVT"
                    colSpan={2}
                  >
                    <span
                      className="sc-fEOsli fJZHYU"
                      color="oxfordBlue"
                      type="heading 2"
                    >
                      Borrow asset
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    className="sc-himrzO sc-gXmSlM fkWGJm cydyBC"
                  >
                    <div
                      className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
                    >
                      Amount
                    </div>
                  </td>
                  <td
                    className="sc-himrzO sc-gXmSlM kgJha-d cydyBC"
                  >
                    <div
                      className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
                    >
                      
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr
                  isTitleAString={false}
                >
                  <td
                    className="sc-himrzO fkWGJm"
                  >
                    <div
                      className="sc-breuTD krXkoK"
                    >
                      <span
                        className="sc-bczRLJ ehiAyy"
                      >
                        <div
                          className="sc-gsnTZi oxHIV"
                        >
                          <input
                            disabled={false}
                            type="text"
                          />
                        </div>
                        <span
                          className="sc-dkzDqf eUqaxQ"
                        >
                          
                        </span>
                      </span>
                      <button
                        appearance="secondary"
                        className="sc-hKMtZM sc-jSMfEi ivRYUu ioWRiD u-fit-content-width"
                        data-element="button"
                        size="small"
                        variant="thin"
                      >
                        MAX
                      </button>
                    </div>
                  </td>
                  <td
                    className="sc-himrzO kgJha-d"
                  >
                    <span>
                      ETH
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="sc-bZkfAO jNQqhP"
            data-element="tableWrapper"
          >
            <table
              className="sc-kLLXSd eXWyzl"
              data-element="table"
            >
              <thead
                className="sc-jdAMXn fcA-dUh"
              >
                
                
                <tr>
                  <td
                    className="sc-himrzO sc-gXmSlM fkWGJm cydyBC"
                  >
                    <div
                      className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
                    >
                      Transaction overview
                    </div>
                  </td>
                  <td
                    className="sc-himrzO sc-gXmSlM kgJha-d cydyBC"
                  >
                    <div
                      className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
                    >
                      
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr
                  isTitleAString={true}
                >
                  <td
                    className="sc-himrzO fkWGJm"
                  >
                    <p
                      className="sc-fEOsli bqlqST c-text--body-3 c-text--color-oxfordBlue"
                    >
                      Health factor
                    </p>
                  </td>
                  <td
                    className="sc-himrzO kgJha-d"
                  >
                    <div
                      className="sc-evZas fQdIpY"
                    >
                      <div
                        className="sc-breuTD zJbNj"
                      >
                        <span
                          className="sc-fEOsli Pybhm"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          1,00
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli Pybhm"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          className="sc-kDDrLX bOqWok"
          gap={1.875}
        >
          <div
            className="sc-evZas cMVNHr"
            gap={1}
          >
            <button
              appearance="dark"
              className="sc-hKMtZM sc-gKXOVf iOviQP llhpmf u-full-width"
              data-element="button"
              size="large"
              variant="large"
            >
              Borrow asset
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal Deposit Modal 1`] = `
<div
  className="sc-ivTmOn fTyfVC"
>
  <div
    className="o-center-layout sc-crXcEl sc-cxabCf TBZtj gAjELd"
  >
    <button
      appearance="text"
      className="sc-hKMtZM sc-papXJ jKfTjM ltXRM sc-iIPllB gVyorW u-fit-content-width"
      data-element="button"
      icon="close"
      size="medium"
      variant="medium"
    />
    <div
      className="sc-llJcti eJHidG"
    >
      <div
        className="sc-evZas gpoJlf"
        gap={5}
      >
        <div
          className="sc-evZas dYoufZ"
          gap={3}
        >
          <div
            className="sc-bZkfAO jNQqhP"
            data-element="tableWrapper"
          >
            <table
              className="sc-kLLXSd eXWyzl"
              data-element="table"
            >
              <thead
                className="sc-jdAMXn fcA-dUh"
              >
                <tr>
                  <td
                    className="sc-iTONeN knoCVT"
                    colSpan={2}
                  >
                    <span
                      className="sc-fEOsli fJZHYU"
                      color="oxfordBlue"
                      type="heading 2"
                    >
                      Deposit asset
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    className="sc-himrzO sc-gXmSlM fkWGJm cydyBC"
                  >
                    <div
                      className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
                    >
                      Amount
                    </div>
                  </td>
                  <td
                    className="sc-himrzO sc-gXmSlM kgJha-d cydyBC"
                  >
                    <div
                      className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
                    >
                      
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr
                  isTitleAString={false}
                >
                  <td
                    className="sc-himrzO fkWGJm"
                  >
                    <div
                      className="sc-breuTD krXkoK"
                    >
                      <span
                        className="sc-bczRLJ ehiAyy"
                      >
                        <div
                          className="sc-gsnTZi oxHIV"
                        >
                          <input
                            disabled={false}
                            type="text"
                          />
                        </div>
                        <span
                          className="sc-dkzDqf eUqaxQ"
                        >
                          
                        </span>
                      </span>
                      <button
                        appearance="secondary"
                        className="sc-hKMtZM sc-jSMfEi ivRYUu ioWRiD u-fit-content-width"
                        data-element="button"
                        size="small"
                        variant="thin"
                      >
                        MAX
                      </button>
                    </div>
                  </td>
                  <td
                    className="sc-himrzO kgJha-d"
                  >
                    <span>
                      ETH
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="sc-bZkfAO jNQqhP"
            data-element="tableWrapper"
          >
            <table
              className="sc-kLLXSd eXWyzl"
              data-element="table"
            >
              <thead
                className="sc-jdAMXn fcA-dUh"
              >
                
                
                <tr>
                  <td
                    className="sc-himrzO sc-gXmSlM fkWGJm cydyBC"
                  >
                    <div
                      className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
                    >
                      Transaction overview
                    </div>
                  </td>
                  <td
                    className="sc-himrzO sc-gXmSlM kgJha-d cydyBC"
                  >
                    <div
                      className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
                    >
                      
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr
                  isTitleAString={true}
                >
                  <td
                    className="sc-himrzO fkWGJm"
                  >
                    <span
                      className="sc-fEOsli bqlqST"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Supply APY
                    </span>
                  </td>
                  <td
                    className="sc-himrzO kgJha-d"
                  >
                    <div
                      className="sc-breuTD zJbNj"
                    >
                      <span
                        className="sc-fEOsli Pybhm"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        2.22%
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  isTitleAString={true}
                >
                  <td
                    className="sc-himrzO fkWGJm"
                  >
                    <span
                      className="sc-fEOsli bqlqST"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Health factor
                    </span>
                  </td>
                  <td
                    className="sc-himrzO kgJha-d"
                  >
                    <div
                      className="sc-evZas fQdIpY"
                    >
                      <div
                        className="sc-breuTD zJbNj"
                      >
                        <span
                          className="sc-fEOsli Pybhm"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          1.00
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli Pybhm"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          className="sc-kDDrLX bOqWok"
          gap={1.875}
        >
          <div
            className="sc-evZas cMVNHr"
            gap={1}
          >
            <button
              appearance="dark"
              className="sc-hKMtZM sc-gKXOVf iOviQP llhpmf u-full-width"
              data-element="button"
              size="large"
              variant="large"
            >
              Approve to conitinue
            </button>
            <button
              appearance="secondary"
              className="sc-hKMtZM sc-jSMfEi bEgYQW ioWRiD u-full-width"
              data-element="button"
              disabled={true}
              size="large"
              variant="large"
            >
              Deposit ETH
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal Modal Example 1`] = `
<button
  appearance="primary"
  className="sc-hKMtZM sc-eCYdqJ kiXBJA jriGrI"
  data-element="button"
  onClick={[Function]}
  size="medium"
  variant="medium"
>
  Open Modal
</button>
`;

exports[`Storyshots Components/Modal Repay Modal 1`] = `
<div
  className="sc-ivTmOn fTyfVC"
>
  <div
    className="o-center-layout sc-crXcEl sc-cxabCf TBZtj gAjELd"
  >
    <button
      appearance="text"
      className="sc-hKMtZM sc-papXJ jKfTjM ltXRM sc-iIPllB gVyorW u-fit-content-width"
      data-element="button"
      icon="close"
      size="medium"
      variant="medium"
    />
    <div
      className="sc-llJcti eJHidG"
    >
      <div
        className="sc-evZas gpoJlf"
        gap={5}
      >
        <div
          className="sc-evZas dYoufZ"
          gap={3}
        >
          <div
            className="sc-bZkfAO jNQqhP"
            data-element="tableWrapper"
          >
            <table
              className="sc-kLLXSd eXWyzl"
              data-element="table"
            >
              <thead
                className="sc-jdAMXn fcA-dUh"
              >
                <tr>
                  <td
                    className="sc-iTONeN knoCVT"
                    colSpan={2}
                  >
                    <span
                      className="sc-fEOsli fJZHYU"
                      color="oxfordBlue"
                      type="heading 2"
                    >
                      Repay asset
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    className="sc-himrzO sc-gXmSlM fkWGJm cydyBC"
                  >
                    <div
                      className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
                    >
                      Amount
                    </div>
                  </td>
                  <td
                    className="sc-himrzO sc-gXmSlM kgJha-d cydyBC"
                  >
                    <div
                      className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
                    >
                      
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr
                  isTitleAString={false}
                >
                  <td
                    className="sc-himrzO fkWGJm"
                  >
                    <div
                      className="sc-breuTD krXkoK"
                    >
                      <span
                        className="sc-bczRLJ ehiAyy"
                      >
                        <div
                          className="sc-gsnTZi oxHIV"
                        >
                          <input
                            disabled={false}
                            type="text"
                          />
                        </div>
                        <span
                          className="sc-dkzDqf eUqaxQ"
                        >
                          
                        </span>
                      </span>
                      <button
                        appearance="secondary"
                        className="sc-hKMtZM sc-jSMfEi ivRYUu ioWRiD u-fit-content-width"
                        data-element="button"
                        size="small"
                        variant="thin"
                      >
                        MAX
                      </button>
                    </div>
                  </td>
                  <td
                    className="sc-himrzO kgJha-d"
                  >
                    <span>
                      ETH
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="sc-bZkfAO jNQqhP"
            data-element="tableWrapper"
          >
            <table
              className="sc-kLLXSd eXWyzl"
              data-element="table"
            >
              <thead
                className="sc-jdAMXn fcA-dUh"
              >
                
                
                <tr>
                  <td
                    className="sc-himrzO sc-gXmSlM fkWGJm cydyBC"
                  >
                    <div
                      className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
                    >
                      Transaction overview
                    </div>
                  </td>
                  <td
                    className="sc-himrzO sc-gXmSlM kgJha-d cydyBC"
                  >
                    <div
                      className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
                    >
                      
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr
                  isTitleAString={true}
                >
                  <td
                    className="sc-himrzO fkWGJm"
                  >
                    <span
                      className="sc-fEOsli bqlqST"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Remaining debt
                    </span>
                  </td>
                  <td
                    className="sc-himrzO kgJha-d"
                  >
                    <div
                      className="sc-evZas fQdIpY"
                    >
                      <span
                        className="sc-fEOsli jAztXw"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        0.000001 Asset
                      </span>
                      <span
                        className="sc-fEOsli Pybhm"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  isTitleAString={true}
                >
                  <td
                    className="sc-himrzO fkWGJm"
                  >
                    <span
                      className="sc-fEOsli bqlqST"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Health factor
                    </span>
                  </td>
                  <td
                    className="sc-himrzO kgJha-d"
                  >
                    <div
                      className="sc-evZas fQdIpY"
                    >
                      <div
                        className="sc-breuTD zJbNj"
                      >
                        <span
                          className="sc-fEOsli Pybhm"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          1.00
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli Pybhm"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          className="sc-kDDrLX bOqWok"
          gap={1.875}
        >
          <div
            className="sc-evZas cMVNHr"
            gap={1}
          >
            <button
              appearance="dark"
              className="sc-hKMtZM sc-gKXOVf iOviQP llhpmf u-full-width"
              data-element="button"
              size="large"
              variant="large"
            >
              Repay asset
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal Withdraw Modal 1`] = `
<div
  className="sc-ivTmOn fTyfVC"
>
  <div
    className="o-center-layout sc-crXcEl sc-cxabCf TBZtj gAjELd"
  >
    <button
      appearance="text"
      className="sc-hKMtZM sc-papXJ jKfTjM ltXRM sc-iIPllB gVyorW u-fit-content-width"
      data-element="button"
      icon="close"
      size="medium"
      variant="medium"
    />
    <div
      className="sc-llJcti eJHidG"
    >
      <div
        className="sc-evZas gpoJlf"
        gap={5}
      >
        <div
          className="sc-evZas dYoufZ"
          gap={3}
        >
          <div
            className="sc-bZkfAO jNQqhP"
            data-element="tableWrapper"
          >
            <table
              className="sc-kLLXSd eXWyzl"
              data-element="table"
            >
              <thead
                className="sc-jdAMXn fcA-dUh"
              >
                <tr>
                  <td
                    className="sc-iTONeN knoCVT"
                    colSpan={2}
                  >
                    <span
                      className="sc-fEOsli fJZHYU"
                      color="oxfordBlue"
                      type="heading 2"
                    >
                      Withdraw asset
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    className="sc-himrzO sc-gXmSlM fkWGJm cydyBC"
                  >
                    <div
                      className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
                    >
                      Amount
                    </div>
                  </td>
                  <td
                    className="sc-himrzO sc-gXmSlM kgJha-d cydyBC"
                  >
                    <div
                      className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
                    >
                      
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr
                  isTitleAString={false}
                >
                  <td
                    className="sc-himrzO fkWGJm"
                  >
                    <div
                      className="sc-breuTD krXkoK"
                    >
                      <span
                        className="sc-bczRLJ ehiAyy"
                      >
                        <div
                          className="sc-gsnTZi oxHIV"
                        >
                          <input
                            disabled={false}
                            type="text"
                          />
                        </div>
                        <span
                          className="sc-dkzDqf eUqaxQ"
                        >
                          
                        </span>
                      </span>
                      <button
                        appearance="secondary"
                        className="sc-hKMtZM sc-jSMfEi ivRYUu ioWRiD u-fit-content-width"
                        data-element="button"
                        size="small"
                        variant="thin"
                      >
                        MAX
                      </button>
                    </div>
                  </td>
                  <td
                    className="sc-himrzO kgJha-d"
                  >
                    <span>
                      ETH
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="sc-bZkfAO jNQqhP"
            data-element="tableWrapper"
          >
            <table
              className="sc-kLLXSd eXWyzl"
              data-element="table"
            >
              <thead
                className="sc-jdAMXn fcA-dUh"
              >
                
                
                <tr>
                  <td
                    className="sc-himrzO sc-gXmSlM fkWGJm cydyBC"
                  >
                    <div
                      className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
                    >
                      Transaction overview
                    </div>
                  </td>
                  <td
                    className="sc-himrzO sc-gXmSlM kgJha-d cydyBC"
                  >
                    <div
                      className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
                    >
                      
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr
                  isTitleAString={true}
                >
                  <td
                    className="sc-himrzO fkWGJm"
                  >
                    <span
                      className="sc-fEOsli bqlqST"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Remaining supply
                    </span>
                  </td>
                  <td
                    className="sc-himrzO kgJha-d"
                  >
                    <div
                      className="sc-evZas fQdIpY"
                    >
                      <div
                        className="sc-breuTD zJbNj"
                      >
                        <span
                          className="sc-fEOsli Pybhm"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          0.000001 Asset
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli Pybhm"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  isTitleAString={true}
                >
                  <td
                    className="sc-himrzO fkWGJm"
                  >
                    <span
                      className="sc-fEOsli bqlqST"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Health factor
                    </span>
                  </td>
                  <td
                    className="sc-himrzO kgJha-d"
                  >
                    <div
                      className="sc-evZas fQdIpY"
                    >
                      <div
                        className="sc-breuTD zJbNj"
                      >
                        <span
                          className="sc-fEOsli Pybhm"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          1.00
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli Pybhm"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          className="sc-kDDrLX bOqWok"
          gap={1.875}
        >
          <div
            className="sc-evZas cMVNHr"
            gap={1}
          >
            <button
              appearance="dark"
              className="sc-hKMtZM sc-gKXOVf iOviQP llhpmf u-full-width"
              data-element="button"
              size="large"
              variant="large"
            >
              Repay asset
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
